<resources>
    <string name="app_name">MemoMe</string>
    <string name="back_again">Premi di nuovo per uscire</string>
    <string name="action_settings">Impostazioni</string>
    <string name="btnDelete">Elimina</string>
    <string name="btnDeleteAll">Cancella note non cifrate</string>
    <string name="confirm_password">Conferma password...</string>
    <string name="cancel">Annulla</string>
    <string name="confirmDelete">Sei sicuro di voler eliminare la nota?</string>
    <string name="chooseColor">Scegli un colore</string>
    <string name="chooseEmoji">Scegli una emoji</string>
    <string name="confirmDeleteAll">Sei sicuro di voler eliminare tutte le note non cifrate?</string>
    <string name="confirmDecode">ConfirmDecode</string>
    <string name="emptyPass">Password vuota non ammessa</string>>
    <string name="created">Creata:</string>
    <string name="deleteAllNotEncoded">Elimina note non cifrate</string>
    <string name="decodeText">Sei sicuro di voler decifrare la nota?</string>
    <string name="developers" translatable="false">Credits:DelloVicario Milia DeTurris</string>
    <string name="delete">Elimina</string>
    <string name="decode">Decifra</string>
    <string name="encodeBtn">Encode</string>
    <string name="decodeBtn">Decode</string>
    <string name="handler_notes">Gestisci note</string>
    <string name="insertText">Inserisci testo qui</string>
    <string name="incorrectPsw">Password errata</string>
    <string name="insertPsw">Cifra nota</string>
    <string name="insertTitle">Inserisci titolo</string>
    <string name="memoMe">MemoMe</string>
    <string name="modified">Modificata:</string>
    <string name="nothing" translatable="false"></string>
    <string name="needTitle">Inserisci Titolo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="pswMatch">Le password non coincidono!</string>
    <string name="sortBy">Ordina per:</string>
    <string name="sortTitle">Titolo</string>
    <string name="sortDateCreation">Data creazione</string>
    <string name="sortLastModify">Data ultima modifica</string>
    <string name="sortColor">Colore</string>
    <string name="sortEmoji">Emoji</string>
    <string name="type_your_password">Inserisci la tua password...</string>
    <string name="type_password">Inserisci Password...</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="warningMemoEncoded">Nota cifrata!</string>
    <string name="warningMemoEncodedText">La nota è cifrata,inserisci la password per visualizzarla.</string>
    <string name="bianco">Bianco</string>
    <string name="celeste">Celeste</string>
    <string name="ciano">Ciano</string>
    <string name="rosa">Rosa</string>
    <string name="lime">Lime</string>
    <string name="grigio">Grigio</string>
    <string name="rosso">Rosso</string>
    <string name="viola">Viola</string>
    <string name="indaco">Indaco</string>
    <string name="verde">Verde</string>
    <string name="marrone">Marrone</string>
    <string name="chiudi">Chiudi</string>
    <string name="nessuna_emoji">Nessuna Emoji</string>
    <string name="clickMe">Emoji</string>
    <string name="nougatToast">Funzione non ancora supportata su questa versione di Android.</string>
    <string name="about">Su di noi:</string>
    <string name="info" translatable="false">Info</string>
    <string name="infoTitle" translatable="false">MemoMe Info:</string>
    <string name="infoText">MemoMe è una applicazione creata dal gruppo Error404 per
    il corso di Mobile Programming (AA 2016/2017), tenuto dal professor Massimo Regoli.
        MemoMe fornisce gli strumenti necessari per la creazione, modifica, cifratura e visualizzazione di note personali,
    tramite una interfaccia user friendly e funzionale.</string>
    <string name="favoriteBtn">Nota preferita</string>
    <string name="notFavoriteBtn">Nota non preferita</string>
    <string name="confirmNotFavorite">Sicuro di voler rimuovere questa nota dai preferiti?</string>
    <string name="confirmFavorite">Vuoi aggiungere questa nota ai preferiti?</string>
    <string name="showMemoTitle">La tua nota</string>
    <string name="modifyMemo">Modifica la tua nota</string>
    <string name="createMemo">Crea una nota</string>
    <string name="navFavorite">Mostra le note preferite</string>
    <string name ="favoriteActivityTitle">Note preferite</string>
    <string name="confirm_close_title">Salvare prima di uscire?</string>
    <string name="confirm_close_text">Vuoi salvare le modifiche prima di uscire?</string>
    <string name="confirm_close_yes">Si</string>
    <string name="confirm_close_no" translatable="false">no</string>
    <string name="nougatNotSupported">Questa funzione non è disponibile per la tua versione di Android</string>
    <string name="search">Search</string>


</resources>
