<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"><![CDATA[

    >

    ]]>
    <item android:title="@string/sortBy">
        <menu>
            <item
                android:id="@+id/nav_camera"
                android:icon="@mipmap/alphabet_sorting"
                android:title="@string/sortTitle" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@mipmap/calendar_icon"
                android:title="@string/sortDateCreation" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@mipmap/calendar_icon"
                android:title="@string/sortLastModify" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@mipmap/palette_icon"
                android:title="@string/sortColor" />
            <item
                android:id="@+id/nav_emoji"
                android:icon="@mipmap/smile_icon"
                android:title="@string/sortEmoji" />
        </menu>
    </item>

    <item android:title="@string/handler_notes">
        <menu>
            <item
                android:id="@+id/nav_delete_all"
                android:icon="@mipmap/delete_finale"
                android:title="@string/btnDeleteAll" />

        </menu>
    </item>

</menu>
