<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id ="@+id/layoutPasswords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="top|center"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/type_password"
            android:inputType="textPassword">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/nameEditText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"></EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutWrongPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutPasswords"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:visibility="gone">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/incorrectPsw"
            app:srcCompat="@mipmap/exlamation_full" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pswMatch"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>